# c-cpp-kata-template

./: CMakeLists.txt  Makefile  README.md
src/: c_exports.h  cpp_exports.h  example.c  example.cpp
test/: example.test.cpp
